Reduce width a little to fix scrollbar in material design extensions page

--- a/options/options.css
+++ b/options/options.css
@@ -12,7 +12,7 @@ body {
 	margin: 2rem;
 	font: 1rem/1.5 "Helvetica Neue", Arial, sans-serif;
 	color: #5a5a5a;
-	min-width: 35rem;
+	min-width: 34rem;
 }
 
 a {
